--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@blocknote/core": "^0.10.1",
     "@blocknote/react": "^0.10.1",
+    "@tiptap/pm": "^2.1.13",
+    "@tiptap/react": "^2.1.13",
+    "@tiptap/starter-kit": "^2.1.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
